@@ -1,3 +1,11 @@
+2008-08-22  Lassi A. Tuura  <lat@iki.fi>
+
+	* IgProfAtomic.h (IgProfAtomicInc, IgProfAtomicDec): Fix return
+	value on increment operation.  This does not actually fix a bug
+	since igprof only cares about zero/non-zero value (igtrace did
+	care).  Update asm constraints to make sure sufficient barriers
+	remain in place.
+
 2008-03-12  Lassi A. Tuura  <lat@iki.fi>
 
 	* IgProfMem.cc, IgProfPerf.cc: Truly remove obsolete headers.
